# gha-job-containers

./: docker-compose.yml
.github/workflows/: buildx.yml  docker.yml  testing.yml
gunicorn/: Dockerfile  pyproject.toml
gunicorn/gha_build/: settings.py
gunicorn/gha_build/tests/: test_dummy.py
nginx/: Dockerfile
