[tool.poetry]
name = "gha_build"
version = "0.1.0"
description = ""
authors = ["Mikko Solismaa <mikko.solismaa@spatineo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.release.dependencies]
python-semantic-release = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
